--- a/css/responsiveMedia320.css
+++ b/css/responsiveMedia320.css
@@ -1,16 +1,26 @@
 @media only screen and (min-width: 320px) {
     h2.shadow {
-        color: unset;
+        color: #E79F1A;
+        font-size: 20pt;
         text-shadow: unset;
-        font-size: 25px;
+        /* font-weight: bold; */
     }
-    .imagesan {
-        display: none;
-    }
-    #container-content {
+    #container {
+        box-shadow: 4px 4px 0 0 rgba(72, 72, 72, 1);
+        background-color: white;
+        border-radius: 25px;
+        border: 1px solid black;
+        position: absolute;
+        display: inline-block;
         top: 2%;
-        left: 10%;
-        right: 10%;
+        left: 5%;
+        right: 5%;
         bottom: 2%;
+    }
+    .image-san {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
     }
 }
