--- a/css/responsiveMedia375.css
+++ b/css/responsiveMedia375.css
@@ -1,9 +1,8 @@
-@media only screen and (min-width: 1440px) {
+@media only screen and (min-width: 320px) {
     h2.shadow {
         color: #E79F1A;
-        font-size: 35pt;
-        margin: 2%;
-        text-shadow: 5px 2px 4px grey;
+        font-size: 20pt;
+        text-shadow: unset;
         font-weight: bold;
     }
     #container {
@@ -13,15 +12,15 @@
         border: 1px solid black;
         position: absolute;
         display: inline-block;
-        top: 5%;
-        left: 20%;
-        right: 20%;
+        top: 2%;
+        left: 8%;
+        right: 8%;
+        bottom: 2%;
     }
     .image-san {
-        float: left;
-        width: 14%;
-    }
-    #body-content {
-        padding: 2%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
     }
 }
