--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,9 @@
-#background-gradient {
-    display: flex;
-    flex-wrap: nowrap;
-    position: static;
-    height: 836px;
+html {
+    height: 100%;
     background: linear-gradient(to bottom, white, rgb(238, 209, 106));
 }
 
 #container {
-    top: 3%;
-}
-
-#container-content {
     box-shadow: 4px 4px 0 0 rgba(72, 72, 72, 1);
     background-color: white;
     border-radius: 25px;
@@ -22,7 +15,7 @@
 }
 
 .imagesan {
-    width: 14%;
+    width: 10%;
     float: left;
 }
 
@@ -32,6 +25,10 @@ h2.shadow {
     margin: 2%;
     text-shadow: 5px 2px 4px grey;
     font-weight: bold;
+}
+
+ul {
+    height: 100%;
 }
 
 .text-center {
@@ -54,10 +51,6 @@ a:hover {
     color: crimson;
 }
 
-a:link {
-    color: pink;
-}
-
 a:active {
     color: blue;
 }
@@ -72,4 +65,88 @@ hr.hr-line {
 
 strong {
     font-style: italic;
+}
+
+
+/* slide css */
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Verdana, sans-serif;
+    margin: 0;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    vertical-align: middle;
+}
+
+.slider-show {
+    max-width: 1000px;
+    max-height: 200px;
+    position: relative;
+    margin: auto;
+}
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: 0.4;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .text {
+        font-size: 11px;
+    }
+}
+
+#Loading {
+    width: 100%;
+    height: 4px;
+    background: red;
+    animation: loading 10s infinite;
+}
+
+@keyframes loading {
+    from {
+        width: 0%;
+    }
+    to {
+        width: 100%;
+    }
 }
