--- a/css/responsiveMedia1440.css
+++ b/css/responsiveMedia1440.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 1440px) {
     h2.shadow {
         color: #E79F1A;
-        font-size: 35pt;
+        font-size: 20pt;
         margin: 2%;
         text-shadow: 5px 2px 4px grey;
         font-weight: bold;
@@ -13,15 +13,50 @@
         border: 1px solid black;
         position: absolute;
         display: inline-block;
-        top: 5%;
-        left: 20%;
-        right: 20%;
+        top: 2%;
+        left: 30%;
+        right: 30%;
     }
     .image-san {
         float: left;
-        width: 14%;
+        width: 15%;
     }
     #body-content {
         padding: 2%;
+    }
+    .image-caption,
+    .image-text {
+        left: 2%;
+    }
+    .image-caption {
+        background-color: rgb(236, 64, 22);
+        color: #dbd9b1;
+        font-size: 20pt;
+        top: 2%;
+        position: absolute;
+        animation: fade-out 3s infinite;
+        animation-delay: 2s;
+        height: max-content;
+    }
+    .image-text {
+        background-image: white;
+        color: white;
+        font-size: 15pt;
+        top: 22%;
+        width: max-content;
+        position: absolute;
+        animation: fade-out 3s infinite;
+        animation-delay: 2s;
+    }
+    ul.image-text {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        background-color: gray;
+    }
+    ul.image-text li:before {
+        content: '✓';
+        color: white;
+        background-color: darkgrey;
     }
 }
