--- a/css/responsiveMedia425.css
+++ b/css/responsiveMedia425.css
@@ -23,4 +23,42 @@
         margin-right: auto;
         width: 20%;
     }
+    div#content {
+        font-size: 10pt;
+    }
+    .image-caption,
+    .image-text {
+        left: 2%;
+    }
+    .image-caption {
+        background-color: rgb(236, 64, 22);
+        color: #dbd9b1;
+        font-size: 11pt;
+        top: 2%;
+        position: absolute;
+        animation: fade-out 3s infinite;
+        animation-delay: 2s;
+        height: max-content;
+    }
+    .image-text {
+        background-image: white;
+        color: white;
+        font-size: 9pt;
+        top: 22%;
+        width: max-content;
+        position: absolute;
+        animation: fade-out 3s infinite;
+        animation-delay: 2s;
+    }
+    ul.image-text {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        background-color: gray;
+    }
+    ul.image-text li:before {
+        content: '✓';
+        color: white;
+        background-color: darkgrey;
+    }
 }
