--- a/css/responsiveMedia1440.css
+++ b/css/responsiveMedia1440.css
@@ -59,4 +59,27 @@
         color: white;
         background-color: darkgrey;
     }
+    /* about - my information */
+    .my-name {
+        text-align: left;
+    }
+    #tilte-contact {
+        text-align: left;
+    }
+    #my-picture {
+        margin-top: 3%;
+        width: 40%;
+        box-sizing: content-box;
+    }
+    .my-img {
+        width: 90%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    table {
+        float: left;
+        height: 100%;
+        border-spacing: 0 8px;
+    }
 }
