--- a/css/responsiveMedia425.css
+++ b/css/responsiveMedia425.css
@@ -61,4 +61,21 @@
         color: white;
         background-color: darkgrey;
     }
+    /* about - my information  */
+    #my-picture {
+        width: 100%;
+    }
+    .my-img {
+        width: 40%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .my-name,
+    #tilte-contact {
+        text-align: center;
+    }
+    table {
+        border-spacing: 0 2px;
+    }
 }
