--- a/css/responsiveMedia768.css
+++ b/css/responsiveMedia768.css
@@ -61,4 +61,24 @@
         color: white;
         background-color: darkgrey;
     }
+    /* about - my information */
+    .my-name {
+        text-align: center;
+    }
+    #tilte-contact {
+        text-align: left;
+    }
+    #my-picture {
+        width: 50%;
+        box-sizing: content-box;
+    }
+    .my-img {
+        width: 97%;
+        float: left;
+    }
+    table {
+        float: right;
+        height: 100%;
+        border-spacing: 0 8px;
+    }
 }
