--- a/css/style.css
+++ b/css/style.css
@@ -93,9 +93,10 @@ strong {
     box-sizing: border-box;
 }
 
-body {
+
+/* body {
     font-family: sans-serif, sans-serif;
-}
+} */
 
 .mySlides {
     display: none;
@@ -224,27 +225,55 @@ ul.image-text li:before {
     background-color: darkgrey;
 }
 
+
+/* responsive menu-bar */
+
 .menu-bar {
     overflow: hidden;
 }
 
 .menu-bar a {
     float: left;
-    width: 15%;
-    color: orangered;
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
 .menu-bar a:hover {
-    background-color: #ddd;
+    background-color: orangered;
     color: black;
 }
 
+.menu-bar .icon {
+    display: none;
+}
 
-/* responsive menu-bar */
+@media screen and (max-width: 425px) {
+    .menu-bar a:not(:first-child) {
+        display: none;
+    }
+    .menu-bar a.icon {
+        float: right;
+        display: block;
+    }
+}
 
-.icon {
-    float: right;
+@media screen and (max-width: 425px) {
+    .menu-bar.responsive {
+        position: relative;
+    }
+    .menu-bar.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+        color: rebeccapurple;
+    }
+    .menu-bar.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
 
 
@@ -280,4 +309,38 @@ div>textarea {
 
 #contact-information-response {
     display: none;
+}
+
+
+/* about - my information */
+
+#my-picture {
+    width: 100%;
+    box-sizing: content-box;
+    float: left;
+}
+
+#my-infor {
+    margin-left: 2px;
+}
+
+.my-name {
+    text-align: center;
+}
+
+#tilte-contact {
+    text-align: left;
+}
+
+.my-img {
+    width: 90%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table {
+    float: left;
+    height: 100%;
+    border-spacing: 0 8px;
 }
